Commit changes on 30 August

--- a/app/customerattribute/webapp/test/flpSandbox.html
+++ b/app/customerattribute/webapp/test/flpSandbox.html
@@ -45,7 +45,7 @@
             },
             applications: {
                 "compsocustomerattribute-display": {
-                    title: "App Title",
+                    title: "Primary Service Order",
                     description: "An SAP Fiori application.",
                     additionalInformation: "SAPUI5.Component=com.pso.customerattribute",
                     applicationType: "URL",
